--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 			<h1>Asteroids part i</h1>
 		</header>
 			<section id="content">
-				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde">
+				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde 
+				Asteroid.pde
+				Floater.pde Spaceship.pde Star.pde">
 				</canvas>
 		    </section>
 	    <footer>
