--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Asteroids part i</title>
+		<title>Anteroids </title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Asteroids part i</h1>
+			<h1>Anteroids part 2</h1>
 		</header>
 			<section id="content">
 				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde 
@@ -18,6 +18,7 @@
 		    </section>
 	    <footer>
 		    press  "a" turn left , "d" turn right, "w" accelerate, "s" deccelerate, "h" hyperspace
+		    Ants are still pretty gross 
 	    </footer>
 	</body>
 </html>
