--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<section id="content">
 				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde 
 				Asteroid.pde
-				Floater.pde Spaceship.pde Star.pde Bulet.pde">
+				Floater.pde Spaceship.pde Star.pde Bullet.pde">
 				</canvas>
 		    </section>
 	    <footer>
